[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Interface/Themes/HiResTheme/Icons/png/window_icon.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Interface/HiRes/BuildMenu/Components/build_objects_menu.gd" type="Script" id=2]
[ext_resource path="res://Assets/Interface/Themes/HiResTheme/Icons/png/door_icon.png" type="Texture" id=3]
[ext_resource path="res://Nodes/Control/PopButton/pop_button.gd" type="Script" id=5]
[ext_resource path="res://Assets/Fonts/ttf/Nunito/Nunito-Bold.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Nodes/Control/ButtonExpansionMenu/ButtonExpansionMenu.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/Interface/Themes/HiResTheme/Icons/png/plus_icon.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 42
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 30.0
content_margin_right = 30.0
content_margin_top = 15.0
content_margin_bottom = 15.0
bg_color = Color( 0.843137, 0.870588, 0.894118, 0.784314 )
border_width_left = 1
border_width_top = 3
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 0.294118 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
corner_detail = 20
shadow_color = Color( 0.164706, 0.164706, 0.180392, 0.0784314 )
shadow_size = 10
shadow_offset = Vector2( 0, 6 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 40.0
content_margin_right = 40.0
content_margin_top = 7.0
content_margin_bottom = 7.0
bg_color = Color( 0.176471, 0.533333, 0.301961, 0.784314 )
border_width_left = 1
border_width_top = 3
border_width_right = 1
border_width_bottom = 2
border_color = Color( 0.337255, 0.694118, 0.403922, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
corner_detail = 20
expand_margin_top = 5.0
expand_margin_bottom = 5.0
shadow_color = Color( 0.164706, 0.164706, 0.180392, 0.0784314 )
shadow_size = 10
shadow_offset = Vector2( 0, 6 )

[node name="BuildObjectsMenu" instance=ExtResource( 8 )]
script = ExtResource( 2 )

[node name="ContentContainer" parent="MenuContainer" index="0"]
margin_right = 615.0
rect_min_size = Vector2( 600, 0 )
rect_pivot_offset = Vector2( -724, 10 )

[node name="MenuButtons" type="HBoxContainer" parent="MenuContainer/ContentContainer" index="0"]
margin_left = 100.0
margin_right = 600.0
margin_bottom = 1410.0
mouse_filter = 2
custom_constants/separation = 20
alignment = 1

[node name="DoorButton" type="Button" parent="MenuContainer/ContentContainer/MenuButtons" index="0"]
margin_top = 660.0
margin_right = 240.0
margin_bottom = 750.0
rect_min_size = Vector2( 140, 90 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 4
custom_colors/font_color_disabled = Color( 1, 1, 1, 0.490196 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
expand_icon = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
modulate_options = {
"active": Color( 1, 1, 1, 1 ),
"inactive": Color( 0.894118, 0.913725, 0.92549, 1 )
}

[node name="TextureRect" type="TextureRect" parent="MenuContainer/ContentContainer/MenuButtons/DoorButton" index="0"]
modulate = Color( 0.301961, 0.341176, 0.372549, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -35.0
margin_top = -35.0
margin_right = 35.0
margin_bottom = 35.0
rect_min_size = Vector2( 70, 70 )
rect_scale = Vector2( 1, 1.01081 )
rect_pivot_offset = Vector2( 40, 40 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WindowButton" type="Button" parent="MenuContainer/ContentContainer/MenuButtons" index="1"]
margin_left = 260.0
margin_top = 660.0
margin_right = 500.0
margin_bottom = 750.0
rect_min_size = Vector2( 140, 90 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 4
custom_colors/font_color_disabled = Color( 1, 1, 1, 0.490196 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
expand_icon = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
modulate_options = {
"active": Color( 1, 1, 1, 1 ),
"inactive": Color( 0.894118, 0.913725, 0.92549, 1 )
}

[node name="TextureRect" type="TextureRect" parent="MenuContainer/ContentContainer/MenuButtons/WindowButton" index="0"]
modulate = Color( 0.301961, 0.341176, 0.372549, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -35.0
margin_top = -35.0
margin_right = 35.0
margin_bottom = 35.0
rect_min_size = Vector2( 70, 70 )
rect_scale = Vector2( 1, 1.01081 )
rect_pivot_offset = Vector2( 40, 40 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlacingButtons" type="HBoxContainer" parent="MenuContainer/ContentContainer" index="1"]
margin_left = 100.0
margin_right = 600.0
margin_bottom = 1410.0
mouse_filter = 2
custom_constants/separation = 20
alignment = 1

[node name="PlaceHereButton" type="Button" parent="MenuContainer/ContentContainer/PlacingButtons" index="0"]
visible = false
margin_top = 660.0
margin_right = 500.0
margin_bottom = 750.0
rect_min_size = Vector2( 140, 90 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 4
custom_colors/font_color_disabled = Color( 0.937255, 1, 0.854902, 0.490196 )
custom_colors/font_color_focus = Color( 0.937255, 1, 0.854902, 1 )
custom_colors/font_color = Color( 0.937255, 1, 0.854902, 1 )
custom_colors/font_color_hover = Color( 0.937255, 1, 0.854902, 1 )
custom_colors/font_color_pressed = Color( 0.937255, 1, 0.854902, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
text = "Place Here"
expand_icon = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
modulate_options = {
"active": Color( 1, 1, 1, 1 ),
"inactive": Color( 0.894118, 0.913725, 0.92549, 1 )
}

[node name="OpenButton" parent="ButtonsContainer" index="0"]
margin_right = 120.0
rect_min_size = Vector2( 120, 100 )

[node name="HBoxContainer" type="HBoxContainer" parent="ButtonsContainer/OpenButton" index="0"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -62.0
margin_top = -30.0
margin_right = 62.0
margin_bottom = 30.0
size_flags_horizontal = 0
size_flags_vertical = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ButtonsContainer/OpenButton/HBoxContainer" index="0"]
margin_left = 10.0
margin_right = 50.0
margin_bottom = 60.0
rect_min_size = Vector2( 40, 40 )
rect_pivot_offset = Vector2( 20, 20 )
texture = ExtResource( 9 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="ButtonsContainer/OpenButton/HBoxContainer" index="1"]
margin_left = 54.0
margin_right = 114.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
rect_pivot_offset = Vector2( 40, 40 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}
